--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -38,12 +38,12 @@ tags:
 
 关于信仰的每周自省
 
-- week1 ✔️ 读完了《英国复兴领袖传》怀菲特
+- week1 ✔️ 读完了《英国复兴领袖传》怀特菲
 - week2 ✔️ 读完了《英国复兴领袖传》约翰·卫斯理
 - week3 ✔️ 读完了《英国复兴领袖传》格里姆肖/威廉·罗曼的部分。
 - week4 ✔️ 读完了《英国复兴领袖传》贝里齐。
 - week5 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
-- week6 ✔️ 读罗马书和《英国复兴领袖传》，每天和小蓝向文为疫情祷告。大部分领袖都糊涂了不下五年，我何必强求自己信仰坚定无比，决定对自己不再苛刻。
+- week6 ✔️ 读罗马书和《英国复兴领袖传》，每天和小蓝向文为疫情祷告。大部分领袖都糊涂了不下五年，我何必强求自己信仰坚定无比，不再苛刻要求自己。
 - week7 ✔️ 每天和小蓝向文为疫情祷告。
 - week8 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week9 🔴 疏于读经。Pray 1110000
@@ -78,8 +78,8 @@ tags:
 - week38 ✔️《宗教情感》第三遍读完了 1111101  Pray 1111101 周五和刘小坤谈育儿到深夜，周六实在无法早起床了，所以没有读经和祷告。
 - week39 ✔️《诗篇》1111111 Pray 1111111 又翻了翻《宗教情感》，时候未到时，文字枯燥，经历一些事后，一下开始明白。
 - week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
-- week41(WIP) 《诗篇》 1101101 Pray 1101101
-- week42
+- week41 🔴《诗篇》 11011010 Pray 11011010 规律的作息非常重要，作息只要乱了，就甭指望早起读经祷告了了。最近还是没从过去发生的一些事情中走出来，心里十分苦闷，反而读诗篇的时候开始理解诗人了。
+- week42(WIP) 《诗篇》 1 Pray 1
 - week43
 - week44
 - week45
@@ -143,8 +143,8 @@ tags:
 - week38 ✔️ 锻炼: R00000R \|  早睡早起: 1011101 \|  站立办公2小时: 111111 \| 颈椎推拿: 0100000
 - week39 🔴 锻炼: 000R000 \|  早睡 0000010 \| 早起: 1111111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000000 买了个颈椎荣泰按摩仪，试试效果。
 - week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
-- week41(WIP) 🔴 锻炼 00R00B \|  早睡 00000 \| 早起 010010 \|  站立办公2小时 000111 \| 颈椎推拿 000011 \| 跑步教材学习 000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
-- week42 
+- week41 🔴 锻炼 00R00B0 \|  早睡 0000000 \| 早起 0100101 \|  站立办公2小时 0001110 \| 颈椎推拿 000011 \| 跑步教材学习 0000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
+- week42(WIP) 🔴 锻炼 \|  早睡 \| 早起 1 \|  站立办公2小时 \| 颈椎推拿 1 \| 跑步教材学习
 - week43 
 - week44 
 - week45 
@@ -243,8 +243,8 @@ B: badminton
 - week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
 - week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
 - week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
-- week41(WIP) 
-- week42 
+- week41 
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -272,8 +272,8 @@ B: badminton
 
 - week39 ✔️ 1101011 \| 买了报佳音上一些不错的绘本
 - week40 ???????
-- week41(WIP) ?10011 
-- week42 
+- week41 ?100110
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -310,8 +310,8 @@ B: badminton
 - week38 ✔️ 周日给妈妈买早饭
 - week39 ✔️ 分享糖果给他的朋友 \| 邀请小朋友来家里。
 - week40 ？
-- week41(WIP) 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，晚上可以让车子注意到他。
-- week42 
+- week41 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，晚上可以让车子注意到他。
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -339,8 +339,8 @@ B: badminton
 - week38 ✔️ /w/ /r/ /æ/ /t/，沐沐比较喜欢洪恩英语，买了1年会员先试试。每天早晨花10分钟一起和沐沐复习英文
 - week39 ✔️ 每天早晨复习英文 1111001 \| 这一周学习的新内容太少了，以后放学后的时间让他学新内容吧。
 - week40 ✔️ 每天早晨复习英文 \| 给沐沐报了一个外教课，他的同学在我家里上课，比较省心。
-- week41(WIP) 每天早晨复习英文 111111
-- week42 
+- week41 每天早晨复习英文 111111
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -376,8 +376,8 @@ B: badminton
 - week38 ✔️ 学习 寒/冷/温/暖，每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week39 ✔️ 早晨复习汉字 1111111 \| 新汉字 热
 - week40 ✔️ 早晨复习汉字（国庆节也是要求他 7 点起床，他已经越来越习惯了）
-- week41(WIP) ????01 (周五他学习吊儿郎当，丈打一次）
-- week42 
+- week41 ????01 (周五他学习吊儿郎当，丈打一次）
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -406,8 +406,8 @@ B: badminton
 - week38 ✔️ 5以内加减法，每天早晨花10分钟一起和沐沐复习数学
 - week39 ✔️ 每天早晨花10分钟一起和沐沐复习数学 1111111 \| 学习5以内减法 / 梯形
 - week40 🔴 No progress
-- week41(WIP) 
-- week42 
+- week41 
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -436,8 +436,8 @@ B: badminton
 - week38 🔴 
 - week39 ✔️ 邀请核桃/板栗/悠悠来家里玩
 - week40 周一送沐沐上学，老师说要降低学业的时间的投入，多带沐沐出去玩一玩，沐沐在学校很乖，但是很安静，也不举手发言。 \| 沐沐在外面玩时，歇斯底里了一次，并攻击另外一个大人和我。要查查资料，教他认识自己的情绪 TODO [ ] \| 周六和皓天一起去卖玻璃水
-- week41(WIP) 周三带沐沐去油管艺术中心卖魔术甩棒，赚了16块钱。
-- week42 
+- week41 周三带沐沐去油管艺术中心卖魔术甩棒，赚了16块钱。
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -518,8 +518,8 @@ B: badminton
 - week38 ✔️ had meeting with Jaya / Aaron / Janina
 - week39 ✔️ meeting with Janina +2 / HIREtech 
 - week40 on vacation
-- week41(WIP) on vacation.
-- week42 
+- week41 on vacation.
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -580,8 +580,8 @@ B: badminton
 - week38 Read the document of E-Verify / Play their API.
 - week39 HIREtech / SAML SSO
 - week40 on vacation
-- week41(WIP) on vacation
-- week42 
+- week41 on vacation
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -633,8 +633,8 @@ B: badminton
 - week38 🔴 Routing Table 这周没太花时间在 aws 上
 - week39  PrivateLink / Egress Internet Gateway / VPC peering / Transmit Hub  VPC 太难了，已经卡了2周了，这周开始走不求甚解。
 - week40 ✔️ VPC: Network ACLs
-- week41(WIP) ✔️ VPC endpoints: interface endpoint, gateway endpoints
-- week42 
+- week41 ✔️ VPC endpoints: interface endpoint, gateway endpoints
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -684,8 +684,8 @@ B: badminton
 - week38 🔴 no progress （下一年开始学前端，认真的）
 - week39 🔴 no progress
 - week40 🔴 expected no progress
-- week41(WIP) 🔴 expected no progress
-- week42 
+- week41 🔴 expected no progress
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
@@ -907,8 +907,8 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - week38 ✔️ 祷告会挪到了周三，因为大家周日晚上没时间。
 - week39 ✔️ 周三晚上吕蓝文一起祷告。
 - week40 on Vacation
-- week41(WIP) on Vacation
-- week42 
+- week41 on Vacation
+- week42(WIP) 
 - week43 
 - week44 
 - week45 
