--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -79,7 +79,7 @@ tags:
 - week39 ✔️《诗篇》1111111 Pray 1111111 又翻了翻《宗教情感》，时候未到时，文字枯燥，经历一些事后，一下开始明白。
 - week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
 - week41 🔴《诗篇》 11011010 Pray 11011010 规律的作息非常重要，作息只要乱了，就甭指望早起读经祷告了了。最近还是没从过去发生的一些事情中走出来，心里十分苦闷，反而读诗篇的时候开始理解诗人了。
-- week42(WIP) 《诗篇》 1 Pray 1
+- week42(WIP) 《诗篇》 11 Pray 11
 - week43
 - week44
 - week45
@@ -144,7 +144,7 @@ tags:
 - week39 🔴 锻炼: 000R000 \|  早睡 0000010 \| 早起: 1111111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000000 买了个颈椎荣泰按摩仪，试试效果。
 - week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
 - week41 🔴 锻炼 00R00B0 \|  早睡 0000000 \| 早起 0100101 \|  站立办公2小时 0001110 \| 颈椎推拿 000011 \| 跑步教材学习 0000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
-- week42(WIP) 🔴 锻炼 \|  早睡 \| 早起 1 \|  站立办公2小时 \| 颈椎推拿 1 \| 跑步教材学习
+- week42(WIP) 🔴 锻炼 0 \|  早睡 0 \| 早起 11 \|  站立办公2小时 0 \| 颈椎推拿 1 \| 跑步教材学习 0 \| 鱼油一粒 11 \| 一杯水 11
 - week43 
 - week44 
 - week45 
@@ -243,7 +243,7 @@ B: badminton
 - week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
 - week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
 - week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
-- week41 
+- week41 🔴
 - week42(WIP) 
 - week43 
 - week44 
@@ -273,7 +273,7 @@ B: badminton
 - week39 ✔️ 1101011 \| 买了报佳音上一些不错的绘本
 - week40 ???????
 - week41 ?100110
-- week42(WIP) 
+- week42(WIP) 0
 - week43 
 - week44 
 - week45 
@@ -295,7 +295,7 @@ B: badminton
 - 每周六与周日的早晨，沐沐负责准备早饭；
 - 沐沐周日买西瓜到教会。
 - 沐沐每周日分棒棒糖给他最好的两个朋友，并鼓励她们保持安静。
-- 沐沐负责倒垃圾
+- 沐沐负责倒家里的干垃圾/可回收垃圾
 
 每周复盘
 
@@ -310,7 +310,7 @@ B: badminton
 - week38 ✔️ 周日给妈妈买早饭
 - week39 ✔️ 分享糖果给他的朋友 \| 邀请小朋友来家里。
 - week40 ？
-- week41 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，晚上可以让车子注意到他。
+- week41 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，一闪一闪，晚上可以让车子注意到他。
 - week42(WIP) 
 - week43 
 - week44 
@@ -340,7 +340,7 @@ B: badminton
 - week39 ✔️ 每天早晨复习英文 1111001 \| 这一周学习的新内容太少了，以后放学后的时间让他学新内容吧。
 - week40 ✔️ 每天早晨复习英文 \| 给沐沐报了一个外教课，他的同学在我家里上课，比较省心。
 - week41 每天早晨复习英文 111111
-- week42(WIP) 
+- week42(WIP) 叽里呱啦（洪恩英语） 11 \| 外教到家授课 0101000 \|
 - week43 
 - week44 
 - week45 
@@ -377,7 +377,7 @@ B: badminton
 - week39 ✔️ 早晨复习汉字 1111111 \| 新汉字 热
 - week40 ✔️ 早晨复习汉字（国庆节也是要求他 7 点起床，他已经越来越习惯了）
 - week41 ????01 (周五他学习吊儿郎当，丈打一次）
-- week42(WIP) 
+- week42(WIP) 洪恩汉字 0
 - week43 
 - week44 
 - week45 
@@ -406,7 +406,7 @@ B: badminton
 - week38 ✔️ 5以内加减法，每天早晨花10分钟一起和沐沐复习数学
 - week39 ✔️ 每天早晨花10分钟一起和沐沐复习数学 1111111 \| 学习5以内减法 / 梯形
 - week40 🔴 No progress
-- week41 
+- week41 ✔️ 沐沐开始去游乐场卖货了，这算是一种形式的锻炼数学的能力吧，活学活用。
 - week42(WIP) 
 - week43 
 - week44 
@@ -437,7 +437,7 @@ B: badminton
 - week39 ✔️ 邀请核桃/板栗/悠悠来家里玩
 - week40 周一送沐沐上学，老师说要降低学业的时间的投入，多带沐沐出去玩一玩，沐沐在学校很乖，但是很安静，也不举手发言。 \| 沐沐在外面玩时，歇斯底里了一次，并攻击另外一个大人和我。要查查资料，教他认识自己的情绪 TODO [ ] \| 周六和皓天一起去卖玻璃水
 - week41 周三带沐沐去油管艺术中心卖魔术甩棒，赚了16块钱。
-- week42(WIP) 
+- week42(WIP) 周一晚上去万科卖竹蜻蜓，沐沐卖了4块钱
 - week43 
 - week44 
 - week45 
@@ -452,6 +452,7 @@ B: badminton
 ### 5.探索: 邀请沐沐的好朋友来家里做客
 
 - week35 ✔️ 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
+- week42(WIP) 沐沐同学来家里一起学英文，每周两次。
 
 ### 4.~~探索: 教沐沐编程~~
 
@@ -469,7 +470,7 @@ B: badminton
 - week35 尝试使用沙漏 ⏳ 培养沐沐的时间概念，在规定的时间内起床/穿衣服。
 - week36 沙漏效果非常明显，沐沐对时间越来越有概念了。起床非常迅速。
 - week38 确立一些[教育原则](https://mednoter.com/rules-to-shepherding-the-heart-of-child.html)，避免因教育理念不同而吵架。
-- week40 当时崔迪明介绍沙漏给我时，没太当回事。没想到沙漏真的可以让小朋友感知到时间。沐沐几乎不赖床了。再次警戒自己要谦卑，多听，不要自以为是，刚愎自用。
+- week40 当时崔迪明介绍沙漏给我时，没太当回事。没想到沙漏真的可以让小朋友感知到时间。沐沐几乎不赖床了。再次警戒自己要谦卑，多听，少说，不要自以为是，刚愎自用。
 
 
 ---
@@ -519,7 +520,7 @@ B: badminton
 - week39 ✔️ meeting with Janina +2 / HIREtech 
 - week40 on vacation
 - week41 on vacation.
-- week42(WIP) 
+- week42(WIP) 一个决心：Daniel / Vincent 中英文都很流利，但是以后开会我们决定都说英文，这样我可以练习英文，和客户以及partner沟通的时候不至于发怵。
 - week43 
 - week44 
 - week45 
@@ -581,7 +582,7 @@ B: badminton
 - week39 HIREtech / SAML SSO
 - week40 on vacation
 - week41 on vacation
-- week42(WIP) 
+- week42(WIP) SAML SSO
 - week43 
 - week44 
 - week45 
@@ -685,7 +686,7 @@ B: badminton
 - week39 🔴 no progress
 - week40 🔴 expected no progress
 - week41 🔴 expected no progress
-- week42(WIP) 
+- week42(WIP) 🔴 expected no progress
 - week43 
 - week44 
 - week45 
@@ -873,6 +874,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 	- 送保罗和盈盈花王尿布，《子女心，父母情》，耳温枪 ✔️
 	- 送韬哥花王尿布，《子女心，父母情》✔️
 	- 送小娟姐姐和姐夫 《子女心，父母情》(WIP)
+	- 送赵伟医生 《子女心，父母情》✔️
 
 4. 其他
 	- 送若郎《成功，目标与动机》《欲罢不能》✔️
