--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -79,7 +79,7 @@ tags:
 - week39 ✔️《诗篇》1111111 Pray 1111111 又翻了翻《宗教情感》，时候未到时，文字枯燥，经历一些事后，一下开始明白。
 - week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
 - week41 🔴《诗篇》 11011010 Pray 11011010 规律的作息非常重要，作息只要乱了，就甭指望早起读经祷告了了。最近还是没从过去发生的一些事情中走出来，心里十分苦闷，反而读诗篇的时候开始理解诗人了。
-- week42(WIP) 《诗篇》 11 Pray 11
+- week42(WIP) 《诗篇》 111 Pray 110
 - week43
 - week44
 - week45
@@ -144,7 +144,7 @@ tags:
 - week39 🔴 锻炼: 000R000 \|  早睡 0000010 \| 早起: 1111111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000000 买了个颈椎荣泰按摩仪，试试效果。
 - week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
 - week41 🔴 锻炼 00R00B0 \|  早睡 0000000 \| 早起 0100101 \|  站立办公2小时 0001110 \| 颈椎推拿 000011 \| 跑步教材学习 0000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
-- week42(WIP) 🔴 锻炼 0 \|  早睡 0 \| 早起 11 \|  站立办公2小时 0 \| 颈椎推拿 1 \| 跑步教材学习 0 \| 鱼油一粒 11 \| 一杯水 11
+- week42(WIP) 🔴 锻炼 000 \|  早睡 010 \| 早起 110 \|  站立办公2小时 001 \| 颈椎推拿 101 \| 跑步教材学习 000 \| 鱼油一粒 111 \| 一杯水 111
 - week43 
 - week44 
 - week45 
@@ -222,7 +222,7 @@ B: badminton
 
 - Quarter 1 ✔️
 - Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
-- Quarter 3 10.23-10.25 回老家
+- Quarter 3 10.23-10.25 回老家(青岛发现疫情，取消回家行程）
 - Quarter 4
 
 ### [增补] 每周给爸妈&爷爷奶奶打个电话
@@ -244,7 +244,7 @@ B: badminton
 - week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
 - week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
 - week41 🔴
-- week42(WIP) 
+- week42(WIP) ✔️ 和奶奶聊了聊天
 - week43 
 - week44 
 - week45 
@@ -273,7 +273,7 @@ B: badminton
 - week39 ✔️ 1101011 \| 买了报佳音上一些不错的绘本
 - week40 ???????
 - week41 ?100110
-- week42(WIP) 0
+- week42(WIP) 0101
 - week43 
 - week44 
 - week45 
@@ -377,7 +377,7 @@ B: badminton
 - week39 ✔️ 早晨复习汉字 1111111 \| 新汉字 热
 - week40 ✔️ 早晨复习汉字（国庆节也是要求他 7 点起床，他已经越来越习惯了）
 - week41 ????01 (周五他学习吊儿郎当，丈打一次）
-- week42(WIP) 洪恩汉字 0
+- week42(WIP) 洪恩识字 睡/累
 - week43 
 - week44 
 - week45 
@@ -407,7 +407,7 @@ B: badminton
 - week39 ✔️ 每天早晨花10分钟一起和沐沐复习数学 1111111 \| 学习5以内减法 / 梯形
 - week40 🔴 No progress
 - week41 ✔️ 沐沐开始去游乐场卖货了，这算是一种形式的锻炼数学的能力吧，活学活用。
-- week42(WIP) 
+- week42(WIP) 洪恩数学 00
 - week43 
 - week44 
 - week45 
@@ -437,7 +437,7 @@ B: badminton
 - week39 ✔️ 邀请核桃/板栗/悠悠来家里玩
 - week40 周一送沐沐上学，老师说要降低学业的时间的投入，多带沐沐出去玩一玩，沐沐在学校很乖，但是很安静，也不举手发言。 \| 沐沐在外面玩时，歇斯底里了一次，并攻击另外一个大人和我。要查查资料，教他认识自己的情绪 TODO [ ] \| 周六和皓天一起去卖玻璃水
 - week41 周三带沐沐去油管艺术中心卖魔术甩棒，赚了16块钱。
-- week42(WIP) 周一晚上去万科卖竹蜻蜓，沐沐卖了4块钱
+- week42(WIP) 周一晚上去万科卖竹蜻蜓，沐沐赚了4块钱
 - week43 
 - week44 
 - week45 
@@ -519,8 +519,8 @@ B: badminton
 - week38 ✔️ had meeting with Jaya / Aaron / Janina
 - week39 ✔️ meeting with Janina +2 / HIREtech 
 - week40 on vacation
-- week41 on vacation.
-- week42(WIP) 一个决心：Daniel / Vincent 中英文都很流利，但是以后开会我们决定都说英文，这样我可以练习英文，和客户以及partner沟通的时候不至于发怵。
+- week41 on vacation. 一个决心：Daniel / Vincent 中英文都很流利，但是以后开会我们决定都说英文，这样我可以练习英文，和客户以及partner沟通的时候不至于发怵。
+- week42(WIP) ✔️ talk with Daniel, Talk with Rob 自从和 Daniel and Vincent 用英文开会以来，效果非常显著。
 - week43 
 - week44 
 - week45 
@@ -582,7 +582,7 @@ B: badminton
 - week39 HIREtech / SAML SSO
 - week40 on vacation
 - week41 on vacation
-- week42(WIP) SAML SSO
+- week42(WIP) SAML SSO / Help Rainux to onboard
 - week43 
 - week44 
 - week45 
@@ -788,10 +788,9 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 （2020-08-17 update 再次提醒自己，不要只聚焦在哭的最响的人，而忽略整体的牧养缺口。）
 
 > 2020-10-09 update  
-> 读完《过犹不及》之后，最大的收获是，教会里有一些人用内疚感操控其他弟兄姐妹，一句“没有爱心”就让别人缴械投降，从而利用别人达到自己的诉求。以后要勇敢的对这些人说不，同时也努力保护那些心思单纯的人，不至于被这些自我为中心的人榨干。
+> 读完《过犹不及》之后，最大的收获是：日常生活中我们非常擅长用内疚感操控别人。教会里也一样，一句“没有爱心”就让别人缴械投降，从而利用别人达到自己的诉求。以后意识到这点，不操纵别人，也避免自己被操纵，同时也努力保护那些心思单纯的人。
 
-> 我服侍是因为喜欢，并不是欠你的，你也休想通过愧疚感来勒索和利用我。此外教会的服侍就是排在我的家庭和工作之后，这就是我的界限，如果有人扮可怜用内疚感来勒索我，或用属灵的大道理来侵蚀我的时间分配和资源分配，我会勇敢的说 No！
-
+> 我服侍是因为喜欢，祝福到别人也是一件开心的事。我要努力让接受帮助的人应该意识到我的界限和优先级——你没有我的家人重要，教会的服侍就是排在我的健康，家庭，学习，工作之后。如果有人习惯性扮可怜用内疚感来榨取我的时间和资源，或用属灵的大道理来游说我，我会勇敢的说： No，你越界了！
 
 ### 1.开放家庭
 
@@ -833,7 +832,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 	- 一年级的英文/语文非常难。
 	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在人生的一个阶段，太累了。
 - Sept. ✔️ 2020-09-12 去坤叔家玩，看望他妈妈。
-- Oct. ✔️ 2020-10-03 去 Tim 家玩。本来要去朱家角的，但是看到皓天和沐沐玩的非常好，就放弃了原计划。
+- Oct. ✔️ 2020-10-03 去 Tim 家玩。本来要去朱家角的，但是看到皓天和沐沐玩的非常好，就修改了计划。
 - Nov.
 - Dec.
 	
@@ -869,6 +868,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 	- Snow@Workstream ✔️
 	- Demo@Workstream ✔️
 	- 滕祥功 & 康康 ✔️
+	- Rob@Workstream ✔️
 
 3. 送给为人父母的朋友育儿用品。
 	- 送保罗和盈盈花王尿布，《子女心，父母情》，耳温枪 ✔️
@@ -910,7 +910,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - week39 ✔️ 周三晚上吕蓝文一起祷告。
 - week40 on Vacation
 - week41 on Vacation
-- week42(WIP) 
+- week42(WIP) ✔️ 周三晚上和向文一起聊天，他指出我应该停止过度反思，心大一点，没心没肺一点。对于我是非常大的帮助。
 - week43 
 - week44 
 - week45 
@@ -934,7 +934,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 
 ### 9. 自己不擅长的事情，Say No, 找其他人互补。
 
-- 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）
+- 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）\| 2020-10-15 好像只要保证一定的界限，不被粘上，我可以和新朋友熟络起来，也愿意关心他们。
 - 我不喜欢陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
 - 我不喜欢组织活动。即使成功的组织了活动，也会非常精疲力尽，毫无满足感。
 - 我不喜欢参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动，爬山，徒步）
