--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -79,8 +79,8 @@ tags:
 - week39 ✔️《诗篇》1111111 Pray 1111111 又翻了翻《宗教情感》，时候未到时，文字枯燥，经历一些事后，一下开始明白。
 - week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
 - week41 🔴《诗篇》 11011010 Pray 11011010 规律的作息非常重要，作息只要乱了，就甭指望早起读经祷告了了。最近还是没从过去发生的一些事情中走出来，心里十分苦闷，反而读诗篇的时候开始理解诗人了。
-- week42(WIP) 《诗篇》 111 Pray 110
-- week43
+- week42 《诗篇》 1110111 Pray 1100111
+- week43(WIP)
 - week44
 - week45
 - week46
@@ -144,8 +144,8 @@ tags:
 - week39 🔴 锻炼: 000R000 \|  早睡 0000010 \| 早起: 1111111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000000 买了个颈椎荣泰按摩仪，试试效果。
 - week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
 - week41 🔴 锻炼 00R00B0 \|  早睡 0000000 \| 早起 0100101 \|  站立办公2小时 0001110 \| 颈椎推拿 000011 \| 跑步教材学习 0000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
-- week42(WIP) 🔴 锻炼 000 \|  早睡 010 \| 早起 110 \|  站立办公2小时 001 \| 颈椎推拿 101 \| 跑步教材学习 000 \| 鱼油一粒 111 \| 一杯水 111
-- week43 
+- week42 🔴 锻炼 000000R \|  早睡 0101001 \| 早起 1100000 天冷了，起不来了。 \|  站立办公1小时 00101 \| 颈椎推拿 1010 \| 跑步教材学习 0000 \| 鱼油一粒 1111111 \| 一杯水 1111111
+- week43(WIP)  锻炼 \|  早睡 \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水
 - week44 
 - week45 
 - week46 
@@ -244,8 +244,8 @@ B: badminton
 - week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
 - week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
 - week41 🔴
-- week42(WIP) ✔️ 和奶奶聊了聊天
-- week43 
+- week42 ✔️ 和奶奶聊了聊天
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -273,8 +273,8 @@ B: badminton
 - week39 ✔️ 1101011 \| 买了报佳音上一些不错的绘本
 - week40 ???????
 - week41 ?100110
-- week42(WIP) 0101
-- week43 
+- week42 0101???
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -311,8 +311,8 @@ B: badminton
 - week39 ✔️ 分享糖果给他的朋友 \| 邀请小朋友来家里。
 - week40 ？
 - week41 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，一闪一闪，晚上可以让车子注意到他。
-- week42(WIP) 
-- week43 
+- week42 (新)负责家里的垃圾倾倒
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -340,8 +340,8 @@ B: badminton
 - week39 ✔️ 每天早晨复习英文 1111001 \| 这一周学习的新内容太少了，以后放学后的时间让他学新内容吧。
 - week40 ✔️ 每天早晨复习英文 \| 给沐沐报了一个外教课，他的同学在我家里上课，比较省心。
 - week41 每天早晨复习英文 111111
-- week42(WIP) 叽里呱啦（洪恩英语） 11 \| 外教到家授课 0101000 \|
-- week43 
+- week42 叽里呱啦（洪恩英语） 11 \| 外教到家授课 0101000 \| (外教课上维持秩序真的好难啊，还是要和外教说明白1个月后，课堂秩序的维护交给她，而不是我。要不然太花时间了。）
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -377,8 +377,8 @@ B: badminton
 - week39 ✔️ 早晨复习汉字 1111111 \| 新汉字 热
 - week40 ✔️ 早晨复习汉字（国庆节也是要求他 7 点起床，他已经越来越习惯了）
 - week41 ????01 (周五他学习吊儿郎当，丈打一次）
-- week42(WIP) 洪恩识字 睡/累
-- week43 
+- week42 洪恩识字 睡/累
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -407,8 +407,8 @@ B: badminton
 - week39 ✔️ 每天早晨花10分钟一起和沐沐复习数学 1111111 \| 学习5以内减法 / 梯形
 - week40 🔴 No progress
 - week41 ✔️ 沐沐开始去游乐场卖货了，这算是一种形式的锻炼数学的能力吧，活学活用。
-- week42(WIP) 洪恩数学 00
-- week43 
+- week42 🔴 No progress
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -428,7 +428,7 @@ B: badminton
 - 如果不开心了，清楚无误的告诉别人自己的感受。
 - 每周问一个同学喜欢吃的食物，喜欢的小动物，喜欢的地方
 - 告诉 Priscilla，很喜欢去她家。这是每周最开心的一件天。
-- 一周带沐沐出去2晚上，去馨逸公寓玩。
+- ~~一周带沐沐出去2晚上，去馨逸公寓玩。（我们家吃饭时间和别人不一样，正好和沐沐朋友完美错开，这一条不切实际）~~
 
 每周复盘
 
@@ -437,8 +437,8 @@ B: badminton
 - week39 ✔️ 邀请核桃/板栗/悠悠来家里玩
 - week40 周一送沐沐上学，老师说要降低学业的时间的投入，多带沐沐出去玩一玩，沐沐在学校很乖，但是很安静，也不举手发言。 \| 沐沐在外面玩时，歇斯底里了一次，并攻击另外一个大人和我。要查查资料，教他认识自己的情绪 TODO [ ] \| 周六和皓天一起去卖玻璃水
 - week41 周三带沐沐去油管艺术中心卖魔术甩棒，赚了16块钱。
-- week42(WIP) 周一晚上去万科卖竹蜻蜓，沐沐赚了4块钱
-- week43 
+- week42 周一晚上去万科卖竹蜻蜓，沐沐赚了4块钱 / 周六去外滩卖魔术甩棒
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -452,7 +452,7 @@ B: badminton
 ### 5.探索: 邀请沐沐的好朋友来家里做客
 
 - week35 ✔️ 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
-- week42(WIP) 沐沐同学来家里一起学英文，每周两次。
+- week42 沐沐同学来家里一起学英文，每周两次。
 
 ### 4.~~探索: 教沐沐编程~~
 
@@ -520,8 +520,8 @@ B: badminton
 - week39 ✔️ meeting with Janina +2 / HIREtech 
 - week40 on vacation
 - week41 on vacation. 一个决心：Daniel / Vincent 中英文都很流利，但是以后开会我们决定都说英文，这样我可以练习英文，和客户以及partner沟通的时候不至于发怵。
-- week42(WIP) ✔️ talk with Daniel, Talk with Rob 自从和 Daniel and Vincent 用英文开会以来，效果非常显著。
-- week43 
+- week42 ✔️ talk with Daniel, Talk with Rob 自从和 Daniel and Vincent 用英文开会以来，效果非常显著。
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -582,8 +582,8 @@ B: badminton
 - week39 HIREtech / SAML SSO
 - week40 on vacation
 - week41 on vacation
-- week42(WIP) SAML SSO / Help Rainux to onboard
-- week43 
+- week42 SAML SSO / Help Rainux to onboard
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -635,8 +635,8 @@ B: badminton
 - week39  PrivateLink / Egress Internet Gateway / VPC peering / Transmit Hub  VPC 太难了，已经卡了2周了，这周开始走不求甚解。
 - week40 ✔️ VPC: Network ACLs
 - week41 ✔️ VPC endpoints: interface endpoint, gateway endpoints
-- week42(WIP) 
-- week43 
+- week42 🔴 not too much progress
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -686,8 +686,8 @@ B: badminton
 - week39 🔴 no progress
 - week40 🔴 expected no progress
 - week41 🔴 expected no progress
-- week42(WIP) 🔴 expected no progress
-- week43 
+- week42 🔴 expected no progress
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
@@ -852,7 +852,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - July. 🔴 failed
 - Aug. 🔴 failed
 - Sept. 🔴 failed
-- Oct.
+- Oct. 2020-10-18 和吕林哥哥随便聊天
 - Nov.
 - Dec.
 
@@ -901,7 +901,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 
 ### 7. 长期和一个年轻人（向文）保持连接。
 
-彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
+彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。g
 
 - week35 ✔️ 
 - week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
@@ -910,8 +910,8 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - week39 ✔️ 周三晚上吕蓝文一起祷告。
 - week40 on Vacation
 - week41 on Vacation
-- week42(WIP) ✔️ 周三晚上和向文一起聊天，他指出我应该停止过度反思，心大一点，没心没肺一点。对于我是非常大的帮助。
-- week43 
+- week42 ✔️ 周三晚上和向文一起聊天，他指出我应该停止过度反思，心大一点，没心没肺一点。对于我是非常大的帮助。
+- week43(WIP) 
 - week44 
 - week45 
 - week46 
